--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "NODE_ENV=production nodemon -r dotenv/config server/server.js",
+    "build": "NODE_ENV=production webpack",
+    "prestart": "npm run build",
     "dev": "NODE_ENV=development nodemon -r dotenv/config server/server.js & NODE_ENV=development webpack-dev-server"
   },
   "keywords": [],
