--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "prestart": "npm run build",
-    "start": "set \"NODE_ENV=production\" && nodemon server/server.js",
+    "start": "nodemon server/server.js",
     "build": "set \"NODE_ENV=production\" && webpack",
     "dev": "set \"NODE_ENV=development\" && concurrently \"webpack-dev-server --open\" \"nodemon server/server.js\""
   },
