--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "eslint-plugin-jsx-a11y": "^6.2.2",
     "eslint-plugin-react": "^7.14.2",
     "eslint-plugin-react-hooks": "^2.3.0",
+    "gh-pages": "^3.1.0",
     "style-loader": "^1.1.2",
     "url-loader": "^3.0.0",
     "webpack": "^4.41.5",
@@ -41,8 +42,11 @@
     "prestart": "npm run build",
     "start": "nodemon server/server.js",
     "build": "set \"NODE_ENV=production\" && webpack",
-    "dev": "set \"NODE_ENV=development\" && concurrently \"webpack-dev-server --open\" \"nodemon server/server.js\""
+    "dev": "set \"NODE_ENV=development\" && concurrently \"webpack-dev-server --open\" \"nodemon server/server.js\"",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
+  "homepage": "http://{Github-username}.github.io/{Github-repo-name}",
   "keywords": [],
   "author": "",
   "license": "ISC"
